# 2026-Near-Earth-Objects

./: .agent-project-id  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.codex/: config.toml
Skills/: _live_connection_test.py  adversarial_review.py  analyze_field_detections.py  analyze_ztf_alert_archive_portfolio.py  assess_survey_coverage.py  audit_real_run.py  background.py  background_follow_up_test_summary.py  background_human_signoff_summary.py  background_ledger_summary.py  background_needs_follow_up_summary.py  background_record_signoff.py  background_reviewed_summary.py  background_run_once.py  background_submission_recommendation_summary.py  background_target_priority_summary.py  background_validation_summary.py  batch_score.py  benchmark_pipeline.py  build_cutout_dataset.py  build_field_ranking_calibration.py  build_promotion_report.py  build_recovery_manifest.py  build_sequence_dataset.py  candidate_ledger.py  check_directive_parity.py  check_incomplete_implementations.py  check_mpc_known.py  check_orbit_quality.py  check_silent_exceptions.py  check_tisserand.py  compare_baselines.py  compute_alert_urgency_scores.py  compute_along_track_errors.py  compute_aphelion_distances.py  compute_apparent_magnitudes.py  compute_arc_completeness.py  compute_arc_curvatures.py  compute_batch_priority_stats.py  compute_brightness_trends.py  (+143 more)
background/: config.json  config.schema.json  live_review_policy.example.json  live_review_policy.schema.json  targets.json
data/: README.md  injection_recovery_baseline.json  injection_recovery_image_level_n200.json  injection_recovery_n200.json  injection_recovery_wise_baseline.json  sample_tracklets.json  stress_test_high_motion.json  training_labels.csv
data_selection/: README.md  acquisition_policy.md  candidate_ledger.README.md  data_inventory.README.md  data_role_registry.yaml  data_selection_decision_log.md  dataset_manifest.schema.json  followup_priority_queue.csv  grouped_splits.README.md  live_search_policy.md  silent_exception_allowlist.json  target_priority_queue.csv  training_data_policy.md
docs/: ACTIVE_HANDOFF.md  AGENT_RELIABILITY_DIRECTIVES.md  ALERT_PATHWAY_GUIDE.md  ALERT_PROTOCOL.md  API_REFERENCE.md  ASTROMETRICS_DETECTION_AGENT_GUIDE.md  ASTROMETRY_GUIDE.md  BACKGROUND_SEARCH_AUTOMATION.md  BATCH_PROCESSING_GUIDE.md  BATCH_STATISTICS_GUIDE.md  CALIBRATION_GUIDE.md  CALIBRATION_METRICS.md  CANDIDATE_CLUSTERING.md  CANDIDATE_GROUPING_GUIDE.md  CLASSIFICATION_FEATURES.md  CLASSIFICATION_GUIDE.md  CLASSIFICATION_METRICS_GUIDE.md  CLASSIFICATION_TIERS_GUIDE.md  COMPOSITE_SCORING_GUIDE.md  CONSOLE_OUTPUT_SPEC.md  (+48 more)
(+327 files in other folders)
