[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neo-detection"
version = "0.23.0"
description = "Near-Earth Object Detection and Ranking Pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13,<3",
    "numpy>=2.4,<3",
    "scipy>=1.17,<2",
    "astropy>=7.2,<8",
    "astroquery>=0.4.6",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "torch>=2.1",
    "requests>=2.33,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration_live: marks tests requiring live network access (deselect with '-m not integration_live')",
]
addopts = "-m 'not integration_live'"
