[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-detection"
version = "0.90.93"
description = "Near-Earth Object Detection and Ranking Pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13,<3",
    "numpy>=2.4,<3",
    "scipy>=1.17,<2",
    "astropy>=7.2,<8",
    "astroquery>=0.4.6",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "torch>=2.1",
    "requests>=2.33,<3",
    "alerce>=2,<3",
    "fastavro>=1.9,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.1",
    "pytest-xdist>=3.8,<4",
    "ruff>=0.1",
    "mypy>=1.6",
]
training = [
    # Kept for compatibility; ALeRCE is also a runtime source provider.
    "alerce>=2,<3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
# py314 is not yet a valid ruff target-version; py313 is the highest supported value.
# Update to py314 once ruff adds support.
target-version = "py313"
# Exclude shell scripts — ruff only lints Python files
exclude = ["Skills/*.sh"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
no_strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration_live: marks tests requiring live network access (deselect with '-m not integration_live')",
]
addopts = "-m 'not integration_live'"

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
